# TakeoverHackathon

./: .gitignore  package-lock.json  pyproject.toml
app/: main.py
app/api/: auth.py  chat.py  dashboard.py  inventory.py  procurement.py  purchase_orders.py
app/auth/: token.py
app/core/: database.py  formatter.py  llm.py  notification_service.py  orchestrator.py  planner.py  scheduler.py  seed.py  tool_registry.py  workflow_engine.py
app/data/: suppliers.py
app/models/: product.py  purchase_order.py  sale.py  user.py
app/schemas/: auth.py
app/services/: email_service.py  report_service.py
app/tools/: analytics_tool.py  finance_tool.py  inventory_tool.py  notification_tool.py  procurement_tool.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/app/: router.jsx
frontend/src/components/: ProtectedRoute.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/components/dashboard/: ActivityTimeline.jsx  BusinessHealth.jsx  Hero.jsx  QuickActions.jsx  RecentApprovals.jsx  RevenueChart.jsx  StatsGrid.jsx
frontend/src/components/layout/: Layout.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/components/ui/: GlassCard.jsx  PrimaryButton.jsx
frontend/src/hooks/: useAnalytics.js  useDashboard.js  useFinance.js  useInventory.js  useNotifications.js  useProcurement.js
frontend/src/layout/: Layout.jsx
frontend/src/pages/: Analytics.jsx  Dashboard.jsx  Finance.jsx  Inventory.jsx  LoginPage.jsx  Notifications.jsx  Procurement.jsx  Settings.jsx
frontend/src/services/: api.js  authService.js  dashboardService.js
