[project]
name = "takeoverhackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.3",
    "bcrypt<4.0",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
